@@ -1,79 +1,263 @@
-## Welcome to Apache Tomcat!
+maven构建tomcat源码
+去tomcat官网下载源码，这里面选择的版本是8.0
 
-### What Is It?
+https://tomcat.apache.org/download-80.cgi
 
-The Apache Tomcat® software is an open source implementation of the Java
-Servlet, JavaServer Pages, Java Expression Language and Java WebSocket
-technologies. The Java Servlet, JavaServer Pages, Java Expression Language and
-Java WebSocket specifications are developed under the
-[Java Community Process](https://jcp.org/en/introduction/overview).
+选择sourceCode下载 地址为：http://mirror.bit.edu.cn/apache/tomcat/tomcat-8/v8.5.41/src/apache-tomcat-8.5.41-src.zip
 
-The Apache Tomcat software is developed in an open and participatory
-environment and released under the
-[Apache License version 2](https://www.apache.org/licenses/). The Apache Tomcat
-project is intended to be a collaboration of the best-of-breed developers from
-around the world. We invite you to participate in this open development
-project. To learn more about getting involved,
-[click here](https://tomcat.apache.org/getinvolved.html) or keep reading.
+有两个种环境方式，zip和tar两种试 一种是windows一种是linux的
 
-Apache Tomcat software powers numerous large-scale, mission-critical web
-applications across a diverse range of industries and organizations. Some of
-these users and their stories are listed on the
-[PoweredBy wiki page](https://wiki.apache.org/tomcat/PoweredBy).
+<meta charset="utf-8">
 
-Apache Tomcat, Tomcat, Apache, the Apache feather, and the Apache Tomcat
-project logo are trademarks of the Apache Software Foundation.
+clipboard.png
+1 两种方式构建 一种是通过ant进行构建 http://ant.apache.org/
 
-### Get It
+需要下载 1.9.8以下版本的ant ，以windows版本为例
 
-For every major Tomcat version there is one download page containing
-links to the latest binary and source code downloads, but also
-links for browsing the download directories and archives:
-- [Tomcat 9](https://tomcat.apache.org/download-90.cgi)
-- [Tomcat 8](https://tomcat.apache.org/download-80.cgi)
-- [Tomcat 7](https://tomcat.apache.org/download-70.cgi)
+clipboard-1.png
+这里选的是1.10.6稳定版
 
-To facilitate choosing the right major Tomcat version one, we have provided a
-[version overview page](https://tomcat.apache.org/whichversion.html).
+clipboard-2.png
+环境变量需要对ant进行配置：新增变量名 ANT_HOME 对应相应的目录
 
-### Documentation
+创建path:
 
-The documentation available as of the date of this release is
-included in the docs webapp which ships with tomcat. You can access that webapp
-by starting tomcat and visiting http://localhost:8080/docs/ in your browser.
-The most up-to-date documentation for each version can be found at:
-- [Tomcat 9](https://tomcat.apache.org/tomcat-9.0-doc/)
-- [Tomcat 8](https://tomcat.apache.org/tomcat-8.5-doc/)
-- [Tomcat 7](https://tomcat.apache.org/tomcat-7.0-doc/)
+clipboard-4.png
+clipboard-5.png
+校验是否配置成功 ant -version
 
-### Installation
+clipboard-6.png
+在源码的目录直接运行ant命令 会对build.xml进行构建
 
-Please see [RUNNING.txt](RUNNING.txt) for more info.
+clipboard-7.png
+clipboard-8.png
+具体可以看下根目录的文件：BUILDING.txt 说得很详细
 
-### Licensing
+至此整个源码构建完成。
 
-Please see [LICENSE](LICENSE) for more info.
+第二个构建方案通过转换为maven的项目进行构建，maven其实与ant一样。与原理也是一样的
 
-### Support and Mailing List Information
+将源码导入idea中 并在根目录创建pom.xml 和calina_home目录 如下图
 
-* Free community support is available through the
-[tomcat-users](https://tomcat.apache.org/lists.html#tomcat-users) email list and
-a dedicated [IRC channel](https://tomcat.apache.org/irc.html) (#tomcat on
-Freenode).
+clipboard-9.png
+pom.xml具体的内容如下：通过jdk1.8进行编译
 
-* If you want freely available support for running Apache Tomcat, please see the
-resources page [here](https://tomcat.apache.org/findhelp.html).
+<?xml version="1.0" encoding="UTF-8"?>
 
-* If you want to be informed about new code releases, bug fixes,
-security fixes, general news and information about Apache Tomcat, please
-subscribe to the
-[tomcat-announce](https://tomcat.apache.org/lists.html#tomcat-announce) email
-list.
+<project xmlns="http://maven.apache.org/POM/4.0.0"
 
-* If you have a concrete bug report for Apache Tomcat, please see the
-instructions for reporting a bug
-[here](https://tomcat.apache.org/bugreport.html).
+xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 
-### Contributing
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
-Please see [CONTRIBUTING](CONTRIBUTING.md) for more info.
+<modelVersion>4.0.0</modelVersion>
+
+<groupId>org.apache.tomcat</groupId>
+
+<artifactId>Tomcat8.0</artifactId>
+
+<name>Tomcat8.0</name>
+
+<version>8.0</version>
+
+<build>
+
+<finalName>Tomcat8.0</finalName>
+
+<sourceDirectory>java</sourceDirectory>
+
+<resources>
+
+<resource>
+
+<directory>java</directory>
+
+</resource>
+
+</resources>
+
+<testResources>
+
+<testResource>
+
+<directory>test</directory>
+
+</testResource>
+
+</testResources>
+
+<plugins>
+
+<plugin>
+
+<groupId>org.apache.maven.plugins</groupId>
+
+<artifactId>maven-compiler-plugin</artifactId>
+
+<version>2.3</version>
+
+<configuration>
+
+<encoding>UTF-8</encoding>
+
+<source>1.8</source>
+
+<target>1.8</target>
+
+</configuration>
+
+</plugin>
+
+</plugins>
+
+</build>
+
+<dependencies>
+
+<dependency>
+
+<groupId>junit</groupId>
+
+<artifactId>junit</artifactId>
+
+<version>4.12</version>
+
+<scope>test</scope>
+
+</dependency>
+
+<dependency>
+
+<groupId>org.easymock</groupId>
+
+<artifactId>easymock</artifactId>
+
+<version>3.4</version>
+
+</dependency>
+
+<dependency>
+
+<groupId>ant</groupId>
+
+<artifactId>ant</artifactId>
+
+<version>1.7.0</version>
+
+</dependency>
+
+<dependency>
+
+<groupId>wsdl4j</groupId>
+
+<artifactId>wsdl4j</artifactId>
+
+<version>1.6.2</version>
+
+</dependency>
+
+<dependency>
+
+<groupId>javax.xml</groupId>
+
+<artifactId>jaxrpc</artifactId>
+
+<version>1.1</version>
+
+</dependency>
+
+<dependency>
+
+<groupId>org.eclipse.jdt.core.compiler</groupId>
+
+<artifactId>ecj</artifactId>
+
+<version>4.5.1</version>
+
+</dependency>
+
+</dependencies>
+
+</project>
+
+此时idea不会自动对源项目代码转化为maven工程项目。需要手动引入。如下图
+
+选择+号 导入pom即可 。
+
+clipboard-10.png
+此时idea 做自动检测到tomcat启动类 Bootstrap。
+
+clipboard-11.png
+需要对此添加一些VM运行参数。主要是构建的目标路径 catalina-home
+
+-Dcatalina.home=catalina-home -Dcatalina.base=catalina-home -Djava.endorsed.dirs=catalina-home/endorsed -Djava.io.tmpdir=catalina-home/temp -Djava.util.logging.manager=org.apache.juli.ClassLoaderLogManager -Djava.util.logging.config.file=catalina-home/conf/logging.properties
+
+clipboard-12.png
+clean 与install 构建成功
+
+clipboard-13.png
+开始启动主导BootStrap.jva
+
+这里面可能会遇到一些问题：如下图
+
+Error:osgi: [apache-tomcat-8.5.20-src] Invalid value for Bundle-Version, @VERSION@ does not match [0-9]{1,9}(.[0-9]{1,9}(.[0-9]{1,9}(.[0-9A-Za-z_-]+)?)?)?
+
+[图片上传失败...(image-1229e4-1559559372234)]
+
+
+此时需要做的就是
+
+如下 Bundle-Version: @VERSION@ 改为 Bundle-Version: 1.1
+
+clipboard-16.png
+Manifest-Version: 1.0
+
+Export-Package: org.apache.tomcat.jdbc.naming;uses:="javax.naming,org.ap
+
+ache.juli.logging,javax.naming.spi";version="@VERSION@",org.apache.tomc
+
+at.jdbc.pool;uses:="org.apache.juli.logging,javax.sql,org.apache.tomcat
+
+.jdbc.pool.jmx,javax.management,javax.naming,javax.naming.spi,org.apach
+
+e.tomcat.jdbc.pool.interceptor";version="@VERSION@",org.apache.tomcat.j
+
+dbc.pool.interceptor;uses:="org.apache.tomcat.jdbc.pool,org.apache.juli
+
+.logging,javax.management.openmbean,javax.management";version="@VERSION@
+
+",org.apache.tomcat.jdbc.pool.jmx;uses:="org.apache.tomcat.jdbc.pool,or
+
+g.apache.juli.logging,javax.management";version="@VERSION@"
+
+Bundle-Vendor: Apache Software Foundation
+
+Bundle-Version: 1.1
+
+Bundle-Name: Apache Tomcat JDBC Connection Pool
+
+Bundle-ManifestVersion: 2
+
+Bundle-SymbolicName: org.apache.tomcat.jdbc
+
+Import-Package:
+
+javax.management;version="0",
+
+javax.management.openmbean;version="0",
+
+javax.naming;version="0",
+
+javax.naming.spi;version="0",
+
+javax.sql;version="0",
+
+org.apache.juli.logging;version="0"
+
+重新启动成功！ 直接进入main方法
+
+clipboard-17.png
+启动需要花费一些时间。默认端口是8080
+
+clipboard-18.png
+下面可以进入tomcat的源码解析环节了。
